--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     volumes:
       - postgres_data:${PGDATA}
     ports:
-      - "${DB_PORT}:5432"
+      - "${DATABASE_PORT}:5432"
     networks:
       - postgres_network
     restart: unless-stopped
