--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,39 +2,25 @@ version: '3.8'
 
 services:
   postgres:
-    container_name: postgres_container
-    image: postgres:16-alpine
+    image: postgres:latest
+    container_name: postgres
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-      PGDATA: ${PGDATA:-docker}
-    volumes:
-      - postgres_data:${PGDATA}
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: quizDb
     ports:
-      - "${DATABASE_PORT}:5432"
-    networks:
-      - postgres_network
-    restart: unless-stopped
-
-  pgadmin:
-    container_name: pgadmin_container
-    image: dpage/pgadmin4:latest
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-admin@admin.com}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-123456}
+      - '5433:5432' # Изменено с 5432:5432 на 5433:5432
     volumes:
-      - pgadmin_data:/var/lib/pgadmin
-    ports:
-      - "${PGADMIN_PORT:-5050}:80"
-    networks:
-      - postgres_network
-    restart: unless-stopped
+      - postgres_data:/var/lib/postgresql/data
 
-networks:
-  postgres_network:
-    driver: bridge
+  redis:
+    image: redis:alpine3.14
+    container_name: redis
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis_data:/data
 
 volumes:
   postgres_data:
-  pgadmin_data:
+  redis_data:
