--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^3.6.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
@@ -42,7 +43,8 @@
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
-    "sequelize-typescript": "^2.1.6"
+    "sequelize-typescript": "^2.1.6",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
